cmake_minimum_required(VERSION 3.5)

project(Videokurs_7_C++)

add_subdirectory(2_auto_lambda_tuple)
add_subdirectory(3_decltype_move_vt)
add_subdirectory(4_assert_brace_class_constexpr_ctor_enum_literal_using)
add_subdirectory(5_attributes_auto_template_deduction_lambda_noexcept_static_assert_trigraph)
add_subdirectory(6_bind_constexpr_if_evaluation_order_filesystem_fold_initializers_inline_structured_bindings_sv)
add_subdirectory(7_ebo_enable_shared_from_this_shared_ptr_unique_ptr_weak_ptr)
add_subdirectory(8_allocator)
add_subdirectory(9_iterator_traits)
add_subdirectory(11_patterns)
add_subdirectory(12_patterns)
add_subdirectory(13_patterns)
#13_iterator не собирается
add_subdirectory(14_patterns)

add_subdirectory(15_conteiners)
#15_deque не собирается
#15_unordered_multiset не собирается

add_subdirectory(16_stl)
#16_accumulate не собирается

add_subdirectory(17_bitmap_circbufer_format_fusion_multiindex_progoption_test_tokenizer)
