cmake_minimum_required(VERSION 3.5)

project(Videokurs_9_qtPatterns)

add_subdirectory(02_Class_patterns)
#add_subdirectory(03_Exception_patterns)
#add_subdirectory(04_Memory_patterns)
#add_subdirectory(05_Signals_and_slots)
add_subdirectory(06_Thread_patterns)
#add_subdirectory(07_Template_patterns)
#add_subdirectory(08_Creational_patterns)
add_subdirectory(09_Structural_patterns)
#add_subdirectory(10_Behavioral_patterns)
#add_subdirectory(11_Qt_State_Machine_Framework)
#add_subdirectory(12_QMake_patterns)
add_subdirectory(13_CMake_patterns)
#add_subdirectory(14_Library_patterns)
#add_subdirectory(15_IO_Patterns)
#add_subdirectory(16_Operating_system_patterns)
