cmake_minimum_required(VERSION 3.19)
project(cppreference.com)
add_subdirectory(unique_ptr)
add_subdirectory(shared_ptr)
add_subdirectory(forward)
add_subdirectory(unitbuf)
add_subdirectory(condition_variable)
add_subdirectory(future)
add_subdirectory(mutex)
add_subdirectory(async)
add_subdirectory(tie)
add_subdirectory(fill_n)
add_subdirectory(std_thread_joinable)
add_subdirectory(byte)
