cmake_minimum_required(VERSION 3.15)
project(cppreference.com)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")

add_subdirectory(unique_ptr)
add_subdirectory(shared_ptr)
add_subdirectory(forward)
add_subdirectory(unitbuf)
add_subdirectory(condition_variable)
add_subdirectory(future)
add_subdirectory(mutex)
add_subdirectory(async)
add_subdirectory(tie)
add_subdirectory(fill_n)
add_subdirectory(std_thread_joinable)
add_subdirectory(byte)
add_subdirectory(emplace_back)
add_subdirectory(std_span)
add_subdirectory(mathematical_constants)
add_subdirectory(ranges)
add_subdirectory(optional)
add_subdirectory(variant)

add_subdirectory(Concurrency_support_library)
