set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -pthread -fcoroutines")

add_executable(coroutine_1  coroutineGetElements.cpp)
add_executable(coroutine_2  eagerFutureWithComments.cpp)
add_executable(coroutine_3  infiniteDataStreamComments.cpp)
add_executable(coroutine_4  lazyFuture.cpp)
add_executable(coroutine_5  lazyFutureOnOtherThread.cpp)
add_executable(coroutine_6  startJobWithAutomaticResumption.cpp)
add_executable(coroutine_7  startJobWithAutomaticResumptionOnThread.cpp)
add_executable(coroutine_8  startJobWithComments.cpp)
add_executable(atomic_1  pingPongAtomicBool.cpp)
add_executable(atomic_2  pingPongAtomicFlag.cpp)
add_executable(atomic_3  pingPongAtomicFlags.cpp)
add_executable(atomic_4  pingPongConditionVariable.cpp)
add_executable(atomic_5  pingPongSemaphore.cpp)
