set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -pthread -fcoroutines")

add_executable(CaseStudies_coroutine_1  coroutineGetElements.cpp)
add_executable(CaseStudies_coroutine_2  eagerFutureWithComments.cpp)
add_executable(CaseStudies_coroutine_3  infiniteDataStreamComments.cpp)
add_executable(CaseStudies_coroutine_4  lazyFuture.cpp)
add_executable(CaseStudies_coroutine_5  lazyFutureOnOtherThread.cpp)
add_executable(CaseStudies_coroutine_6  startJobWithAutomaticResumption.cpp)
add_executable(CaseStudies_coroutine_7  startJobWithAutomaticResumptionOnThread.cpp)
add_executable(CaseStudies_coroutine_8  startJobWithComments.cpp)
add_executable(CaseStudies_pingPongAtomicBool  pingPongAtomicBool.cpp)
add_executable(CaseStudies_pingPongAtomicFlag  pingPongAtomicFlag.cpp)
add_executable(CaseStudies_pingPongAtomicFlags  pingPongAtomicFlags.cpp)
add_executable(CaseStudies_pingPongConditionVariable  pingPongConditionVariable.cpp)
add_executable(CaseStudies_pingPongSemaphore  pingPongSemaphore.cpp)
